@@ -86,55 +86,48 @@ class HoldingsDataProcessorTest extends BaseTest {
   public static final String FOLIO_SOURCE_ID = "cc38e41b-58ec-4302-b740-21d821020c92";
   public static final String MARC_SOURCE_ID = "58145b85-ef82-4063-8ba0-eb0b892d059e";
   public static final String IDENTIFIER = "678";
-  @Autowired
-  DataProcessorFactory factory;
-  @MockitoBean
-  ErrorService errorService;
-  @MockitoBean
-  ElectronicAccessService electronicAccessService;
-  @MockitoBean
-  private ConsortiaService consortiaService;
-  @MockitoBean
-  private ElectronicAccessReferenceService electronicAccessReferenceService;
-  @MockitoSpyBean
-  private FolioExecutionContext folioExecutionContext;
-  @MockitoBean
-  private LocalReferenceDataService localReferenceDataService;
+  @Autowired DataProcessorFactory factory;
+  @MockitoBean ErrorService errorService;
+  @MockitoBean ElectronicAccessService electronicAccessService;
+  @MockitoBean private ConsortiaService consortiaService;
+  @MockitoBean private ElectronicAccessReferenceService electronicAccessReferenceService;
+  @MockitoSpyBean private FolioExecutionContext folioExecutionContext;
+  @MockitoBean private LocalReferenceDataService localReferenceDataService;
 
   private FolioDataProcessor<ExtendedHoldingsRecord> processor;
 
   @MockitoBean
   private BulkOperationExecutionContentRepository bulkOperationExecutionContentRepository;
 
-  @Autowired
-  private FolioModuleMetadata folioModuleMetadata;
+  @Autowired private FolioModuleMetadata folioModuleMetadata;
 
   @BeforeEach
   void setUp() {
     if (isNull(processor)) {
       processor = factory.getProcessorFromFactory(ExtendedHoldingsRecord.class);
     }
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
             new HoldingsRecordsSource()
-                    .withName("FOLIO")
-                    .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
-    when(holdingsSourceClient.getById(MARC_SOURCE_ID)).thenReturn(
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(MARC_SOURCE_ID))
+        .thenReturn(
             new HoldingsRecordsSource()
-                    .withName("MARC")
-                    .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+                .withName("MARC")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
   }
 
   @Test
   void testReplaceTemporaryLocation() {
     var updatedLocationId = "dc3868f6-6169-47b2-88a7-71c2e9e4e924";
-    var updatedLocation = new ItemLocation()
-            .withId(updatedLocationId)
-            .withName("New location");
+    var updatedLocation = new ItemLocation().withId(updatedLocationId).withName("New location");
 
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
             new HoldingsRecordsSource()
-                    .withName("FOLIO")
-                    .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
     HashMap<String, Collection<String>> headers = new HashMap<>();
     headers.put(XOkapiHeaders.TENANT, List.of("diku"));
@@ -145,44 +138,60 @@ class HoldingsDataProcessorTest extends BaseTest {
     when(folioExecutionContext.getAllHeaders()).thenReturn(headers);
     var permanentLocationId = "2508a0cb-e43a-404d-bd78-2e847dfca229";
     var temporaryLocationId = "c8d27cb7-a86b-45f7-b6f4-1604fb467660";
-    var holding = new HoldingsRecord()
+    var holding =
+        new HoldingsRecord()
             .withSourceId(FOLIO_SOURCE_ID)
             .withPermanentLocationId(permanentLocationId)
             .withTemporaryLocationId(temporaryLocationId)
             .withEffectiveLocationId(temporaryLocationId);
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var temporaryLocationUpdatingResult = processor.process(IDENTIFIER, extendedHoldingsRecord,
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var temporaryLocationUpdatingResult =
+        processor.process(
+            IDENTIFIER,
+            extendedHoldingsRecord,
             rules(rule(TEMPORARY_LOCATION, REPLACE_WITH, updatedLocationId)));
 
     assertNotNull(temporaryLocationUpdatingResult);
-    assertEquals(updatedLocationId, temporaryLocationUpdatingResult.getUpdated().getEntity()
-            .getTemporaryLocationId());
-    assertEquals(updatedLocationId, temporaryLocationUpdatingResult.getUpdated().getEntity()
-            .getEffectiveLocationId());
+    assertEquals(
+        updatedLocationId,
+        temporaryLocationUpdatingResult.getUpdated().getEntity().getTemporaryLocationId());
+    assertEquals(
+        updatedLocationId,
+        temporaryLocationUpdatingResult.getUpdated().getEntity().getEffectiveLocationId());
 
-    var permanentLocationUpdatingResult = processor.process(IDENTIFIER, extendedHoldingsRecord,
+    var permanentLocationUpdatingResult =
+        processor.process(
+            IDENTIFIER,
+            extendedHoldingsRecord,
             rules(rule(PERMANENT_LOCATION, REPLACE_WITH, updatedLocationId)));
 
     assertNotNull(permanentLocationUpdatingResult);
-    assertEquals(updatedLocationId, permanentLocationUpdatingResult.getUpdated().getEntity()
-            .getPermanentLocationId());
-    assertEquals(temporaryLocationId, permanentLocationUpdatingResult.getUpdated().getEntity()
-            .getEffectiveLocationId());
+    assertEquals(
+        updatedLocationId,
+        permanentLocationUpdatingResult.getUpdated().getEntity().getPermanentLocationId());
+    assertEquals(
+        temporaryLocationId,
+        permanentLocationUpdatingResult.getUpdated().getEntity().getEffectiveLocationId());
   }
 
   @Test
   void testUpdateMarcEntity() {
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withSourceId(MARC_SOURCE_ID)).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withSourceId(MARC_SOURCE_ID))
+            .tenantId("tenant")
+            .build();
 
-    when(holdingsSourceClient.getById(MARC_SOURCE_ID)).thenReturn(new HoldingsRecordsSource()
-            .withName("MARC")
-            .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(MARC_SOURCE_ID))
+        .thenReturn(
+            new HoldingsRecordsSource()
+                .withName("MARC")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
-
-    var actual = processor.process(IDENTIFIER, extendedHoldingsRecord,
-            rules(rule(PERMANENT_LOCATION, CLEAR_FIELD, null)));
+    var actual =
+        processor.process(
+            IDENTIFIER, extendedHoldingsRecord, rules(rule(PERMANENT_LOCATION, CLEAR_FIELD, null)));
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
   }
@@ -194,19 +203,21 @@ class HoldingsDataProcessorTest extends BaseTest {
 
     var unknownSourceId = UUID.randomUUID().toString();
 
-    var holding = new HoldingsRecord()
+    var holding =
+        new HoldingsRecord()
             .withSourceId(unknownSourceId)
             .withPermanentLocationId(permanentLocationId)
             .withTemporaryLocationId(temporaryLocationId)
             .withEffectiveLocationId(temporaryLocationId);
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
 
-    when(holdingsSourceClient.getById(unknownSourceId)).thenThrow(
-            new NotFoundException("Source was not found"));
+    when(holdingsSourceClient.getById(unknownSourceId))
+        .thenThrow(new NotFoundException("Source was not found"));
 
-    var result = processor.process(IDENTIFIER, extendedHoldingsRecord,
-            rules(rule(TEMPORARY_LOCATION, CLEAR_FIELD, null)));
+    var result =
+        processor.process(
+            IDENTIFIER, extendedHoldingsRecord, rules(rule(TEMPORARY_LOCATION, CLEAR_FIELD, null)));
 
     assertNotNull(result);
     assertNull(result.getUpdated().getEntity().getTemporaryLocationId());
@@ -218,22 +229,25 @@ class HoldingsDataProcessorTest extends BaseTest {
     var permanentLocationId = "2508a0cb-e43a-404d-bd78-2e847dfca229";
     var temporaryLocationId = "c8d27cb7-a86b-45f7-b6f4-1604fb467660";
 
-    var holding = new HoldingsRecord()
+    var holding =
+        new HoldingsRecord()
             .withSourceId(FOLIO_SOURCE_ID)
             .withPermanentLocationId(permanentLocationId)
             .withTemporaryLocationId(temporaryLocationId)
             .withEffectiveLocationId(temporaryLocationId);
 
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
 
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
             new HoldingsRecordsSource()
-                    .withName("FOLIO")
-                    .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
-    var result = processor.process(IDENTIFIER, extendedHoldingsRecord,
-            rules(rule(TEMPORARY_LOCATION, CLEAR_FIELD, null)));
+    var result =
+        processor.process(
+            IDENTIFIER, extendedHoldingsRecord, rules(rule(TEMPORARY_LOCATION, CLEAR_FIELD, null)));
 
     assertNotNull(result);
     assertNull(result.getUpdated().getEntity().getTemporaryLocationId());
@@ -242,29 +256,43 @@ class HoldingsDataProcessorTest extends BaseTest {
 
   @Test
   void testClearPermanentLocation() {
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID)).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID))
+            .tenantId("tenant")
+            .build();
 
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(new HoldingsRecordsSource()
-            .withName("FOLIO")
-            .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
+            new HoldingsRecordsSource()
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
-    var actual = processor.process(IDENTIFIER, extendedHoldingsRecord,
-            rules(rule(PERMANENT_LOCATION, CLEAR_FIELD, null)));
+    var actual =
+        processor.process(
+            IDENTIFIER, extendedHoldingsRecord, rules(rule(PERMANENT_LOCATION, CLEAR_FIELD, null)));
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
   }
 
   @Test
   void testReplacePermanentLocationWithEmptyValue() {
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID)).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID))
+            .tenantId("tenant")
+            .build();
 
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(new HoldingsRecordsSource()
-            .withName("FOLIO")
-            .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
+            new HoldingsRecordsSource()
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
-    var actual = processor.process(IDENTIFIER, extendedHoldingsRecord,
+    var actual =
+        processor.process(
+            IDENTIFIER,
+            extendedHoldingsRecord,
             rules(rule(PERMANENT_LOCATION, REPLACE_WITH, null)));
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
@@ -272,18 +300,26 @@ class HoldingsDataProcessorTest extends BaseTest {
 
   @Test
   void testReplacePermanentLocationWithNonExistedValue() {
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID)).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID))
+            .tenantId("tenant")
+            .build();
 
     var nonExistedLocationId = "62b9c19c-59d0-481d-8957-eb95a96bb144";
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(new HoldingsRecordsSource()
-            .withName("FOLIO")
-            .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
+            new HoldingsRecordsSource()
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
     when(locationClient.getLocationById(nonExistedLocationId))
-            .thenThrow(FeignException.FeignClientException.class);
+        .thenThrow(FeignException.FeignClientException.class);
 
-    var actual = processor.process(IDENTIFIER, extendedHoldingsRecord,
+    var actual =
+        processor.process(
+            IDENTIFIER,
+            extendedHoldingsRecord,
             rules(rule(PERMANENT_LOCATION, REPLACE_WITH, nonExistedLocationId)));
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
@@ -292,14 +328,22 @@ class HoldingsDataProcessorTest extends BaseTest {
   @Test
   void testReplacePermanentLocationWithInvalidValue() {
     var invalidLocationId = "62b9c19c-59d0";
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID)).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID))
+            .tenantId("tenant")
+            .build();
 
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(new HoldingsRecordsSource()
-            .withName("FOLIO")
-            .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
+            new HoldingsRecordsSource()
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
-    var actual = processor.process(IDENTIFIER, extendedHoldingsRecord,
+    var actual =
+        processor.process(
+            IDENTIFIER,
+            extendedHoldingsRecord,
             rules(rule(PERMANENT_LOCATION, REPLACE_WITH, invalidLocationId)));
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
@@ -307,22 +351,29 @@ class HoldingsDataProcessorTest extends BaseTest {
 
   @Test
   void testNonSupportedOptionAndAction() {
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID)).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withSourceId(FOLIO_SOURCE_ID))
+            .tenantId("tenant")
+            .build();
     var updatedLocationId = "dc3868f6-6169-47b2-88a7-71c2e9e4e924";
-    var updatedLocation = new ItemLocation()
-            .withId(updatedLocationId)
-            .withName("New location");
+    var updatedLocation = new ItemLocation().withId(updatedLocationId).withName("New location");
 
-    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID)).thenReturn(new HoldingsRecordsSource()
-            .withName("FOLIO")
-            .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
+    when(holdingsSourceClient.getById(FOLIO_SOURCE_ID))
+        .thenReturn(
+            new HoldingsRecordsSource()
+                .withName("FOLIO")
+                .withSource(HoldingsRecordsSource.SourceEnum.FOLIO));
 
     when(locationClient.getLocationById(updatedLocationId)).thenReturn(updatedLocation);
 
-    var actual = processor.process(IDENTIFIER, extendedHoldingsRecord,
-            rules(rule(EMAIL_ADDRESS, REPLACE_WITH, updatedLocationId),
-            rule(PERMANENT_LOCATION, ADD_TO_EXISTING, updatedLocationId)));
+    var actual =
+        processor.process(
+            IDENTIFIER,
+            extendedHoldingsRecord,
+            rules(
+                rule(EMAIL_ADDRESS, REPLACE_WITH, updatedLocationId),
+                rule(PERMANENT_LOCATION, ADD_TO_EXISTING, updatedLocationId)));
 
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
@@ -331,25 +382,38 @@ class HoldingsDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void testUpdaterForSuppressFromDiscoveryOption() {
-    var holdingsRecord = new HoldingsRecord()
-            .withId(UUID.randomUUID().toString())
-            .withDiscoverySuppress(false);
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holdingsRecord)
-            .tenantId("tenant").build();
+    var holdingsRecord =
+        new HoldingsRecord().withId(UUID.randomUUID().toString()).withDiscoverySuppress(false);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
 
     var dataProcessor = new HoldingsDataProcessor(null, null, null, null, null, null, null);
 
-    dataProcessor.updater(SUPPRESS_FROM_DISCOVERY, new Action().type(SET_TO_TRUE),
-            extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            SUPPRESS_FROM_DISCOVERY, new Action().type(SET_TO_TRUE), extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
     assertTrue(holdingsRecord.getDiscoverySuppress());
-    dataProcessor.updater(SUPPRESS_FROM_DISCOVERY, new Action().type(SET_TO_FALSE),
-            extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            SUPPRESS_FROM_DISCOVERY, new Action().type(SET_TO_FALSE), extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
     assertFalse(holdingsRecord.getDiscoverySuppress());
-    dataProcessor.updater(SUPPRESS_FROM_DISCOVERY, new Action().type(SET_TO_TRUE_INCLUDING_ITEMS),
-            extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            SUPPRESS_FROM_DISCOVERY,
+            new Action().type(SET_TO_TRUE_INCLUDING_ITEMS),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertTrue(holdingsRecord.getDiscoverySuppress());
-    dataProcessor.updater(SUPPRESS_FROM_DISCOVERY, new Action().type(SET_TO_FALSE_INCLUDING_ITEMS),
-            extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            SUPPRESS_FROM_DISCOVERY,
+            new Action().type(SET_TO_FALSE_INCLUDING_ITEMS),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertFalse(holdingsRecord.getDiscoverySuppress());
   }
 
@@ -359,19 +423,29 @@ class HoldingsDataProcessorTest extends BaseTest {
     var holdingsNote = new HoldingsNote().withHoldingsNoteTypeId("typeId").withStaffOnly(false);
     var holding = new HoldingsRecord().withNotes(List.of(holdingsNote));
 
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
 
     var parameter = new Parameter();
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId");
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(MARK_AS_STAFF_ONLY)
-            .parameters(List.of(parameter)), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(MARK_AS_STAFF_ONLY).parameters(List.of(parameter)),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
 
     assertTrue(holding.getNotes().getFirst().getStaffOnly());
   }
@@ -382,19 +456,29 @@ class HoldingsDataProcessorTest extends BaseTest {
     var holdingsNote = new HoldingsNote().withHoldingsNoteTypeId("typeId").withStaffOnly(true);
     var holding = new HoldingsRecord().withNotes(List.of(holdingsNote));
 
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
 
     var parameter = new Parameter();
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId");
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(REMOVE_MARK_AS_STAFF_ONLY)
-            .parameters(List.of(parameter)), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(REMOVE_MARK_AS_STAFF_ONLY).parameters(List.of(parameter)),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
 
     assertFalse(holding.getNotes().getFirst().getStaffOnly());
   }
@@ -404,15 +488,22 @@ class HoldingsDataProcessorTest extends BaseTest {
   void testRemoveAdministrativeNotes() {
     var administrativeNote = "administrative note";
     var holding = new HoldingsRecord().withAdministrativeNotes(List.of(administrativeNote));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
 
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(ADMINISTRATIVE_NOTE, new Action().type(REMOVE_ALL),
-                    extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(ADMINISTRATIVE_NOTE, new Action().type(REMOVE_ALL), extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
     assertTrue(holding.getAdministrativeNotes().isEmpty());
   }
 
@@ -422,18 +513,28 @@ class HoldingsDataProcessorTest extends BaseTest {
     var note1 = new HoldingsNote().withHoldingsNoteTypeId("typeId1");
     var note2 = new HoldingsNote().withHoldingsNoteTypeId("typeId2");
     var holding = new HoldingsRecord().withNotes(List.of(note1, note2));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder()
-            .entity(holding).tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
     var parameter = new Parameter();
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId1");
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(REMOVE_ALL)
-                    .parameters(List.of(parameter)),
-            extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(REMOVE_ALL).parameters(List.of(parameter)),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(1, holding.getNotes().size());
     assertEquals("typeId2", holding.getNotes().getFirst().getHoldingsNoteTypeId());
   }
@@ -443,21 +544,35 @@ class HoldingsDataProcessorTest extends BaseTest {
   void testAddAdministrativeNotes() {
     var administrativeNote1 = "administrative note";
     var holding = new HoldingsRecord();
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder()
-            .entity(holding).tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(ADMINISTRATIVE_NOTE, new Action().type(ADD_TO_EXISTING)
-            .updated(administrativeNote1), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            ADMINISTRATIVE_NOTE,
+            new Action().type(ADD_TO_EXISTING).updated(administrativeNote1),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(1, holding.getAdministrativeNotes().size());
     assertEquals(administrativeNote1, holding.getAdministrativeNotes().getFirst());
     var administrativeNote2 = "administrative note 2";
-    dataProcessor.updater(ADMINISTRATIVE_NOTE, new Action().type(ADD_TO_EXISTING)
-            .updated(administrativeNote2), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            ADMINISTRATIVE_NOTE,
+            new Action().type(ADD_TO_EXISTING).updated(administrativeNote2),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(2, holding.getAdministrativeNotes().size());
   }
 
@@ -469,15 +584,25 @@ class HoldingsDataProcessorTest extends BaseTest {
     var parameter = new Parameter();
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId1");
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(ADD_TO_EXISTING)
-            .parameters(List.of(parameter)).updated(note1), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(ADD_TO_EXISTING).parameters(List.of(parameter)).updated(note1),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
 
     assertEquals(1, holding.getNotes().size());
     assertEquals("typeId1", holding.getNotes().getFirst().getHoldingsNoteTypeId());
@@ -485,9 +610,13 @@ class HoldingsDataProcessorTest extends BaseTest {
     assertEquals(false, holding.getNotes().getFirst().getStaffOnly());
     var note2 = "note2";
     parameter.setValue("typeId2");
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(ADD_TO_EXISTING)
-            .parameters(List.of(parameter)).updated(note2), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(ADD_TO_EXISTING).parameters(List.of(parameter)).updated(note2),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
 
     assertEquals(2, holding.getNotes().size());
     assertEquals("typeId2", holding.getNotes().get(1).getHoldingsNoteTypeId());
@@ -495,11 +624,16 @@ class HoldingsDataProcessorTest extends BaseTest {
     assertEquals(false, holding.getNotes().get(1).getStaffOnly());
 
     parameter.setValue("typeId3");
-    List<Parameter> params = List.of(new Parameter().key(STAFF_ONLY_NOTE_PARAMETER_KEY)
-            .value("true"), parameter);
+    List<Parameter> params =
+        List.of(new Parameter().key(STAFF_ONLY_NOTE_PARAMETER_KEY).value("true"), parameter);
     var note3 = "note3";
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(ADD_TO_EXISTING).parameters(params)
-            .updated(note3), extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(ADD_TO_EXISTING).parameters(params).updated(note3),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(3, holding.getNotes().size());
     assertEquals("typeId3", holding.getNotes().get(2).getHoldingsNoteTypeId());
     assertEquals(note3, holding.getNotes().get(2).getNote());
@@ -511,17 +645,29 @@ class HoldingsDataProcessorTest extends BaseTest {
   void testFindAndRemoveForAdministrativeNotes() {
     var administrativeNote1 = "administrative note";
     var administrativeNote2 = "Administrative note";
-    var holding = new HoldingsRecord().withAdministrativeNotes(new ArrayList<>(
-            List.of(administrativeNote1, administrativeNote2)));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant")
-            .build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var holding =
+        new HoldingsRecord()
+            .withAdministrativeNotes(
+                new ArrayList<>(List.of(administrativeNote1, administrativeNote2)));
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(ADMINISTRATIVE_NOTE, new Action().type(FIND_AND_REMOVE_THESE)
-            .initial("administrative"), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            ADMINISTRATIVE_NOTE,
+            new Action().type(FIND_AND_REMOVE_THESE).initial("administrative"),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(2, holding.getAdministrativeNotes().size());
     assertEquals(" note", holding.getAdministrativeNotes().get(0));
     assertEquals("Administrative note", holding.getAdministrativeNotes().get(1));
@@ -536,14 +682,28 @@ class HoldingsDataProcessorTest extends BaseTest {
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId1");
     var holding = new HoldingsRecord().withNotes(List.of(note1, note2));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null, null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(FIND_AND_REMOVE_THESE).initial("example")
-            .parameters(List.of(parameter)), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action()
+                .type(FIND_AND_REMOVE_THESE)
+                .initial("example")
+                .parameters(List.of(parameter)),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(2, holding.getNotes().size());
     assertEquals("typeId1", holding.getNotes().get(0).getHoldingsNoteTypeId());
     assertEquals(" note", holding.getNotes().get(0).getNote());
@@ -556,16 +716,32 @@ class HoldingsDataProcessorTest extends BaseTest {
     var administrativeNote1 = "administrative note";
     var administrativeNote2 = "Administrative note";
     var expectedNote = "new administrative note";
-    var holding = new HoldingsRecord().withAdministrativeNotes(new ArrayList<>(
-            List.of(administrativeNote1, administrativeNote2)));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null, null, null, null);
+    var holding =
+        new HoldingsRecord()
+            .withAdministrativeNotes(
+                new ArrayList<>(List.of(administrativeNote1, administrativeNote2)));
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(ADMINISTRATIVE_NOTE, new Action().type(FIND_AND_REPLACE)
-            .initial("administrative").updated("new administrative"), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            ADMINISTRATIVE_NOTE,
+            new Action()
+                .type(FIND_AND_REPLACE)
+                .initial("administrative")
+                .updated("new administrative"),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(2, holding.getAdministrativeNotes().size());
     assertEquals(expectedNote, holding.getAdministrativeNotes().get(0));
     assertEquals(administrativeNote2, holding.getAdministrativeNotes().get(1));
@@ -580,15 +756,29 @@ class HoldingsDataProcessorTest extends BaseTest {
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId1");
     var holding = new HoldingsRecord().withNotes(List.of(note1, note2));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null, null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(FIND_AND_REPLACE)
-            .parameters(List.of(parameter))
-            .initial("example").updated("new example"), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action()
+                .type(FIND_AND_REPLACE)
+                .parameters(List.of(parameter))
+                .initial("example")
+                .updated("new example"),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
 
     assertEquals("new example note", holding.getNotes().get(0).getNote());
     assertEquals("Example note", holding.getNotes().get(1).getNote());
@@ -598,16 +788,27 @@ class HoldingsDataProcessorTest extends BaseTest {
   @SneakyThrows
   void testChangeTypeForAdministrativeNotes() {
     var administrativeNote = "note";
-    var holding = new HoldingsRecord().withAdministrativeNotes(
-            new ArrayList<>(List.of(administrativeNote)));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var holding =
+        new HoldingsRecord().withAdministrativeNotes(new ArrayList<>(List.of(administrativeNote)));
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(ADMINISTRATIVE_NOTE, new Action().type(CHANGE_TYPE)
-            .updated("typeId"), extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            ADMINISTRATIVE_NOTE,
+            new Action().type(CHANGE_TYPE).updated("typeId"),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(0, holding.getAdministrativeNotes().size());
     assertEquals("note", holding.getNotes().getFirst().getNote());
     assertEquals("typeId", holding.getNotes().getFirst().getHoldingsNoteTypeId());
@@ -622,15 +823,28 @@ class HoldingsDataProcessorTest extends BaseTest {
     parameter.setKey(HOLDINGS_NOTE_TYPE_ID_KEY);
     parameter.setValue("typeId1");
     var holding = new HoldingsRecord().withNotes(List.of(note1, note2));
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holding)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holding).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(CHANGE_TYPE)
-            .updated(ADMINISTRATIVE_NOTE.getValue()).parameters(List.of(parameter)),
-            extendedHoldingsRecord, false).apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action()
+                .type(CHANGE_TYPE)
+                .updated(ADMINISTRATIVE_NOTE.getValue())
+                .parameters(List.of(parameter)),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
 
     assertEquals(1, holding.getAdministrativeNotes().size());
     assertEquals("note1", holding.getAdministrativeNotes().getFirst());
@@ -640,9 +854,13 @@ class HoldingsDataProcessorTest extends BaseTest {
     holding.setAdministrativeNotes(null);
     holding.setNotes(List.of(note1, note2));
 
-    dataProcessor.updater(HOLDINGS_NOTE, new Action().type(CHANGE_TYPE).updated("typeId3")
-            .parameters(List.of(parameter)), extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(
+            HOLDINGS_NOTE,
+            new Action().type(CHANGE_TYPE).updated("typeId3").parameters(List.of(parameter)),
+            extendedHoldingsRecord,
+            false)
+        .apply(extendedHoldingsRecord);
     assertEquals(2, holding.getNotes().size());
     assertEquals("note1", holding.getNotes().get(0).getNote());
     assertEquals("typeId3", holding.getNotes().get(0).getHoldingsNoteTypeId());
@@ -653,16 +871,24 @@ class HoldingsDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void testClone() {
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()), null,
-            null, null, null);
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            new HoldingsNotesUpdater(new AdministrativeNotesUpdater()),
+            null,
+            null,
+            null,
+            null);
     var administrativeNotes = new ArrayList<String>();
     administrativeNotes.add("note1");
-    var holding1 = new HoldingsRecord().withId("id")
+    var holding1 =
+        new HoldingsRecord()
+            .withId("id")
             .withAdministrativeNotes(administrativeNotes)
             .withNotes(new ArrayList<>());
-    var extendedHoldingsRecord1 = ExtendedHoldingsRecord.builder().entity(holding1)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord1 =
+        ExtendedHoldingsRecord.builder().entity(holding1).tenantId("tenant").build();
     var extendedHoldingsRecord2 = dataProcessor.clone(extendedHoldingsRecord1);
     assertTrue(dataProcessor.compare(extendedHoldingsRecord1, extendedHoldingsRecord2));
 
@@ -685,61 +911,80 @@ class HoldingsDataProcessorTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @ValueSource(strings = {"ELECTRONIC_ACCESS_URL_RELATIONSHIP",
-                          "ELECTRONIC_ACCESS_URI", "ELECTRONIC_ACCESS_LINK_TEXT",
-                          "ELECTRONIC_ACCESS_MATERIALS_SPECIFIED",
-                          "ELECTRONIC_ACCESS_URL_PUBLIC_NOTE"
-  })
+  @ValueSource(
+      strings = {
+        "ELECTRONIC_ACCESS_URL_RELATIONSHIP",
+        "ELECTRONIC_ACCESS_URI",
+        "ELECTRONIC_ACCESS_LINK_TEXT",
+        "ELECTRONIC_ACCESS_MATERIALS_SPECIFIED",
+        "ELECTRONIC_ACCESS_URL_PUBLIC_NOTE"
+      })
   @SneakyThrows
   void shouldClearElectronicAccessFields(UpdateOptionType option) {
     var holdingsRecord = buildHoldingsWithElectronicAccess();
 
-    var dataProcessor = new HoldingsDataProcessor(null, null,
+    var dataProcessor =
+        new HoldingsDataProcessor(
             null,
-            new ElectronicAccessUpdaterFactory(folioExecutionContext,
-                    localReferenceDataService), null, null, null);
+            null,
+            null,
+            new ElectronicAccessUpdaterFactory(folioExecutionContext, localReferenceDataService),
+            null,
+            null,
+            null);
     dataProcessor.folioExecutionContext = folioExecutionContext;
     var action = new Action().type(CLEAR_FIELD);
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holdingsRecord)
-            .tenantId("tenant").build();
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
 
-    dataProcessor.updater(option, action, extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(option, action, extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
 
     var electronicAccess = holdingsRecord.getElectronicAccess().getFirst();
     switch (option) {
       case ELECTRONIC_ACCESS_URL_RELATIONSHIP -> assertNull(electronicAccess.getRelationshipId());
       case ELECTRONIC_ACCESS_URI -> assertEquals(EMPTY, electronicAccess.getUri());
       case ELECTRONIC_ACCESS_LINK_TEXT -> assertNull(electronicAccess.getLinkText());
-      case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED -> assertNull(
-              electronicAccess.getMaterialsSpecification());
+      case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED ->
+          assertNull(electronicAccess.getMaterialsSpecification());
       case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE -> assertNull(electronicAccess.getPublicNote());
       default -> throw new IllegalStateException("Unexpected value: " + option);
     }
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
             ELECTRONIC_ACCESS_URL_RELATIONSHIP    | 2510A1D1-A61C-4378-8886-B831004F018E
             ELECTRONIC_ACCESS_URI                 | http://example.org
             ELECTRONIC_ACCESS_LINK_TEXT           | link text
             ELECTRONIC_ACCESS_MATERIALS_SPECIFIED | materials
             ELECTRONIC_ACCESS_URL_PUBLIC_NOTE     | public note
-          """, delimiter = '|')
+          """,
+      delimiter = '|')
   @SneakyThrows
-  void shouldFindAndClearExactlyMatchedElectronicAccessFields(UpdateOptionType option,
-                                                              String value) {
+  void shouldFindAndClearExactlyMatchedElectronicAccessFields(
+      UpdateOptionType option, String value) {
     var holdingsRecord = buildHoldingsWithElectronicAccess();
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holdingsRecord)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            null, new ElectronicAccessUpdaterFactory(
-                    folioExecutionContext, localReferenceDataService), null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            null,
+            new ElectronicAccessUpdaterFactory(folioExecutionContext, localReferenceDataService),
+            null,
+            null,
+            null);
     dataProcessor.folioExecutionContext = folioExecutionContext;
     var action = new Action().type(FIND_AND_REMOVE_THESE).initial(value);
 
-    dataProcessor.updater(option, action, extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(option, action, extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
 
     var modified = holdingsRecord.getElectronicAccess().get(0);
     var unmodified = holdingsRecord.getElectronicAccess().get(1);
@@ -760,8 +1005,9 @@ class HoldingsDataProcessorTest extends BaseTest {
       }
       case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED -> {
         assertEquals(EMPTY, modified.getMaterialsSpecification());
-        assertEquals(initialElectronicAccess.getMaterialsSpecification(),
-                unmodified.getMaterialsSpecification());
+        assertEquals(
+            initialElectronicAccess.getMaterialsSpecification(),
+            unmodified.getMaterialsSpecification());
       }
       case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE -> {
         assertEquals(EMPTY, modified.getPublicNote());
@@ -772,26 +1018,36 @@ class HoldingsDataProcessorTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
             ELECTRONIC_ACCESS_URI                 | example.org
             ELECTRONIC_ACCESS_LINK_TEXT           | link
             ELECTRONIC_ACCESS_MATERIALS_SPECIFIED | material
             ELECTRONIC_ACCESS_URL_PUBLIC_NOTE     | public
-          """, delimiter = '|')
+          """,
+      delimiter = '|')
   @SneakyThrows
-  void shouldFindAndClearPartiallyMatchedElectronicAccessFields(UpdateOptionType option,
-                                                                String value) {
+  void shouldFindAndClearPartiallyMatchedElectronicAccessFields(
+      UpdateOptionType option, String value) {
     var holdingsRecord = buildHoldingsWithElectronicAccess();
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holdingsRecord)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            null, new ElectronicAccessUpdaterFactory(
-                    folioExecutionContext, localReferenceDataService), null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            null,
+            new ElectronicAccessUpdaterFactory(folioExecutionContext, localReferenceDataService),
+            null,
+            null,
+            null);
     dataProcessor.folioExecutionContext = folioExecutionContext;
     var action = new Action().type(FIND_AND_REMOVE_THESE).initial(value);
 
-    dataProcessor.updater(option, action, extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(option, action, extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
 
     var modified = holdingsRecord.getElectronicAccess().get(0);
     var unmodified = holdingsRecord.getElectronicAccess().get(1);
@@ -808,8 +1064,9 @@ class HoldingsDataProcessorTest extends BaseTest {
       }
       case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED -> {
         assertEquals("s", modified.getMaterialsSpecification());
-        assertEquals(initialElectronicAccess.getMaterialsSpecification(),
-                unmodified.getMaterialsSpecification());
+        assertEquals(
+            initialElectronicAccess.getMaterialsSpecification(),
+            unmodified.getMaterialsSpecification());
       }
       case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE -> {
         assertEquals(" note", modified.getPublicNote());
@@ -820,63 +1077,83 @@ class HoldingsDataProcessorTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
             ELECTRONIC_ACCESS_URL_RELATIONSHIP    | fc34ddc0-0cfc-40b3-8e1a-bade16b33e5b
             ELECTRONIC_ACCESS_URI                 | http://replaced.org
             ELECTRONIC_ACCESS_LINK_TEXT           | new link text
             ELECTRONIC_ACCESS_MATERIALS_SPECIFIED | new materials
             ELECTRONIC_ACCESS_URL_PUBLIC_NOTE     | new note
-          """, delimiter = '|')
+          """,
+      delimiter = '|')
   @SneakyThrows
   void shouldReplaceElectronicAccessFields(UpdateOptionType option, String newValue) {
     var holdingsRecord = buildHoldingsWithElectronicAccess();
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holdingsRecord)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            null, new ElectronicAccessUpdaterFactory(folioExecutionContext,
-            localReferenceDataService), null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            null,
+            new ElectronicAccessUpdaterFactory(folioExecutionContext, localReferenceDataService),
+            null,
+            null,
+            null);
     dataProcessor.folioExecutionContext = folioExecutionContext;
     var action = new Action().type(REPLACE_WITH).updated(newValue);
 
-    dataProcessor.updater(option, action, extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(option, action, extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
 
     var electronicAccess = holdingsRecord.getElectronicAccess().getFirst();
     switch (option) {
-      case ELECTRONIC_ACCESS_URL_RELATIONSHIP -> assertEquals(
-              newValue, electronicAccess.getRelationshipId());
+      case ELECTRONIC_ACCESS_URL_RELATIONSHIP ->
+          assertEquals(newValue, electronicAccess.getRelationshipId());
       case ELECTRONIC_ACCESS_URI -> assertEquals(newValue, electronicAccess.getUri());
       case ELECTRONIC_ACCESS_LINK_TEXT -> assertEquals(newValue, electronicAccess.getLinkText());
-      case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED -> assertEquals(
-              newValue, electronicAccess.getMaterialsSpecification());
-      case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE -> assertEquals(
-              newValue, electronicAccess.getPublicNote());
+      case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED ->
+          assertEquals(newValue, electronicAccess.getMaterialsSpecification());
+      case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE ->
+          assertEquals(newValue, electronicAccess.getPublicNote());
       default -> throw new IllegalStateException("Unexpected value: " + option);
     }
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
             ELECTRONIC_ACCESS_URL_RELATIONSHIP    | 2510a1d1-a61c-4378-8886-b831004f018e  | a6398566-f6cb-4916-96a9-5d3353e06d58
             ELECTRONIC_ACCESS_URI                 | http://example.org                    | http://modified.org
             ELECTRONIC_ACCESS_LINK_TEXT           | link text                             | new link text
             ELECTRONIC_ACCESS_MATERIALS_SPECIFIED | materials                             | new materials
             ELECTRONIC_ACCESS_URL_PUBLIC_NOTE     | public note                           | new public note
-          """, delimiter = '|')
+          """,
+      delimiter = '|')
   @SneakyThrows
-  void shouldFindAndReplaceExactlyMatchedElectronicAccessFields(UpdateOptionType option,
-                                                                String initial, String updated) {
+  void shouldFindAndReplaceExactlyMatchedElectronicAccessFields(
+      UpdateOptionType option, String initial, String updated) {
     var holdingsRecord = buildHoldingsWithElectronicAccess();
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder().entity(holdingsRecord)
-            .tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null, null,
-            null, new ElectronicAccessUpdaterFactory(
-                    folioExecutionContext, localReferenceDataService), null, null, null);
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            null,
+            new ElectronicAccessUpdaterFactory(folioExecutionContext, localReferenceDataService),
+            null,
+            null,
+            null);
     dataProcessor.folioExecutionContext = folioExecutionContext;
     var action = new Action().type(FIND_AND_REPLACE).initial(initial).updated(updated);
 
-    dataProcessor.updater(option, action, extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(option, action, extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
 
     var modified = holdingsRecord.getElectronicAccess().get(0);
     var unmodified = holdingsRecord.getElectronicAccess().get(1);
@@ -897,8 +1174,9 @@ class HoldingsDataProcessorTest extends BaseTest {
       }
       case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED -> {
         assertEquals(updated, modified.getMaterialsSpecification());
-        assertEquals(initialElectronicAccess.getMaterialsSpecification(),
-                unmodified.getMaterialsSpecification());
+        assertEquals(
+            initialElectronicAccess.getMaterialsSpecification(),
+            unmodified.getMaterialsSpecification());
       }
       case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE -> {
         assertEquals(updated, modified.getPublicNote());
@@ -909,28 +1187,36 @@ class HoldingsDataProcessorTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
             ELECTRONIC_ACCESS_URI                 | example            | modified            | http://modified.org
             ELECTRONIC_ACCESS_LINK_TEXT           | link text          | new link text       | new link text
             ELECTRONIC_ACCESS_MATERIALS_SPECIFIED | material           | new material        | new materials
             ELECTRONIC_ACCESS_URL_PUBLIC_NOTE     | public             | new public          | new public note
-          """, delimiter = '|')
+          """,
+      delimiter = '|')
   @SneakyThrows
-  void shouldFindAndReplacePartiallyMatchedElectronicAccessFields(UpdateOptionType option,
-                                                                  String initial, String updated,
-                                                                  String expected) {
+  void shouldFindAndReplacePartiallyMatchedElectronicAccessFields(
+      UpdateOptionType option, String initial, String updated, String expected) {
     var holdingsRecord = buildHoldingsWithElectronicAccess();
-    var extendedHoldingsRecord = ExtendedHoldingsRecord.builder()
-            .entity(holdingsRecord).tenantId("tenant").build();
-    var dataProcessor = new HoldingsDataProcessor(null,
-            null, null,
+    var extendedHoldingsRecord =
+        ExtendedHoldingsRecord.builder().entity(holdingsRecord).tenantId("tenant").build();
+    var dataProcessor =
+        new HoldingsDataProcessor(
+            null,
+            null,
+            null,
             new ElectronicAccessUpdaterFactory(folioExecutionContext, localReferenceDataService),
-            null, null, null);
+            null,
+            null,
+            null);
     dataProcessor.folioExecutionContext = folioExecutionContext;
     var action = new Action().type(FIND_AND_REPLACE).initial(initial).updated(updated);
 
-    dataProcessor.updater(option, action, extendedHoldingsRecord, false)
-            .apply(extendedHoldingsRecord);
+    dataProcessor
+        .updater(option, action, extendedHoldingsRecord, false)
+        .apply(extendedHoldingsRecord);
 
     var modified = holdingsRecord.getElectronicAccess().get(0);
     var unmodified = holdingsRecord.getElectronicAccess().get(1);
@@ -947,8 +1233,9 @@ class HoldingsDataProcessorTest extends BaseTest {
       }
       case ELECTRONIC_ACCESS_MATERIALS_SPECIFIED -> {
         assertEquals(expected, modified.getMaterialsSpecification());
-        assertEquals(initialElectronicAccess.getMaterialsSpecification(),
-                unmodified.getMaterialsSpecification());
+        assertEquals(
+            initialElectronicAccess.getMaterialsSpecification(),
+            unmodified.getMaterialsSpecification());
       }
       case ELECTRONIC_ACCESS_URL_PUBLIC_NOTE -> {
         assertEquals(expected, modified.getPublicNote());
@@ -965,18 +1252,26 @@ class HoldingsDataProcessorTest extends BaseTest {
 
     try (var ignored = Mockito.mockStatic(FolioExecutionContextUtil.class)) {
       when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(), any()))
-              .thenReturn(folioExecutionContext);
+          .thenReturn(folioExecutionContext);
 
       var permLocationFromMemberB = UUID.randomUUID().toString();
       var actionTenants = List.of("memberB");
       var holdId = UUID.randomUUID().toString();
       var initPermLocation = UUID.randomUUID().toString();
-      var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-              new HoldingsRecord().withId(holdId)
-              .withPermanentLocationId(initPermLocation)).tenantId("memberA").build();
+      var extendedHolding =
+          ExtendedHoldingsRecord.builder()
+              .entity(new HoldingsRecord().withId(holdId).withPermanentLocationId(initPermLocation))
+              .tenantId("memberA")
+              .build();
 
-      var rules = rules(rule(PERMANENT_LOCATION, REPLACE_WITH, permLocationFromMemberB,
-              actionTenants, List.of()));
+      var rules =
+          rules(
+              rule(
+                  PERMANENT_LOCATION,
+                  REPLACE_WITH,
+                  permLocationFromMemberB,
+                  actionTenants,
+                  List.of()));
       var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
       var result = processor.process(IDENTIFIER, extendedHolding, rules);
@@ -984,10 +1279,16 @@ class HoldingsDataProcessorTest extends BaseTest {
       assertNotNull(result);
       assertEquals(initPermLocation, result.getUpdated().getEntity().getPermanentLocationId());
 
-      verify(errorService, times(1)).saveError(operationId, IDENTIFIER,
-              String.format("%s cannot be updated because the record is associated with "
-                              + "%s and %s is not associated with this tenant.",
-              holdId, "memberA", "permanent location").trim(), ErrorType.ERROR);
+      verify(errorService, times(1))
+          .saveError(
+              operationId,
+              IDENTIFIER,
+              String.format(
+                      "%s cannot be updated because the record is associated with "
+                          + "%s and %s is not associated with this tenant.",
+                      holdId, "memberA", "permanent location")
+                  .trim(),
+              ErrorType.ERROR);
     }
   }
 
@@ -999,30 +1300,48 @@ class HoldingsDataProcessorTest extends BaseTest {
 
     try (var ignored = Mockito.mockStatic(FolioExecutionContextUtil.class)) {
       when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(), any()))
-              .thenReturn(folioExecutionContext);
+          .thenReturn(folioExecutionContext);
 
       var electronicAccessFromMemberB = UUID.randomUUID().toString();
       var holdId = UUID.randomUUID().toString();
       var initElectronicAccess = UUID.randomUUID().toString();
-      var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-              new HoldingsRecord().withId(holdId)
-              .withElectronicAccess(List.of(new ElectronicAccess().withRelationshipId(
-                      initElectronicAccess)))).tenantId("memberA").build();
+      var extendedHolding =
+          ExtendedHoldingsRecord.builder()
+              .entity(
+                  new HoldingsRecord()
+                      .withId(holdId)
+                      .withElectronicAccess(
+                          List.of(new ElectronicAccess().withRelationshipId(initElectronicAccess))))
+              .tenantId("memberA")
+              .build();
 
-      var rules = rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, FIND_AND_REPLACE,
-              electronicAccessFromMemberB, List.of(), List.of()));
+      var rules =
+          rules(
+              rule(
+                  ELECTRONIC_ACCESS_URL_RELATIONSHIP,
+                  FIND_AND_REPLACE,
+                  electronicAccessFromMemberB,
+                  List.of(),
+                  List.of()));
       var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
       var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
       assertNotNull(result);
-      assertEquals(initElectronicAccess, result.getUpdated().getEntity().getElectronicAccess()
-              .getFirst().getRelationshipId());
+      assertEquals(
+          initElectronicAccess,
+          result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
 
-      verify(errorService, times(1)).saveError(operationId, IDENTIFIER,
-              String.format("%s cannot be updated because the record is associated with %s and %s "
-                              + "is not associated with this tenant.",
-              holdId, "memberA", "URL relationship").trim(), ErrorType.ERROR);
+      verify(errorService, times(1))
+          .saveError(
+              operationId,
+              IDENTIFIER,
+              String.format(
+                      "%s cannot be updated because the record is associated with %s and %s "
+                          + "is not associated with this tenant.",
+                      holdId, "memberA", "URL relationship")
+                  .trim(),
+              ErrorType.ERROR);
     }
   }
 
@@ -1034,15 +1353,24 @@ class HoldingsDataProcessorTest extends BaseTest {
 
     try (var ignored = Mockito.mockStatic(FolioExecutionContextUtil.class)) {
       when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(), any()))
-              .thenReturn(folioExecutionContext);
+          .thenReturn(folioExecutionContext);
 
       var electronicAccessFromMemberB = UUID.randomUUID().toString();
       var holdId = UUID.randomUUID().toString();
-      var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-              new HoldingsRecord().withId(holdId)).tenantId("memberA").build();
+      var extendedHolding =
+          ExtendedHoldingsRecord.builder()
+              .entity(new HoldingsRecord().withId(holdId))
+              .tenantId("memberA")
+              .build();
 
-      var rules = rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, FIND_AND_REPLACE,
-              electronicAccessFromMemberB, List.of(), List.of()));
+      var rules =
+          rules(
+              rule(
+                  ELECTRONIC_ACCESS_URL_RELATIONSHIP,
+                  FIND_AND_REPLACE,
+                  electronicAccessFromMemberB,
+                  List.of(),
+                  List.of()));
       var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
       var result = processor.process(IDENTIFIER, extendedHolding, rules);
@@ -1050,10 +1378,16 @@ class HoldingsDataProcessorTest extends BaseTest {
       assertNotNull(result);
       assertNull(result.getUpdated().getEntity().getElectronicAccess());
 
-      verify(errorService, times(1)).saveError(operationId,
-              IDENTIFIER, String.format("%s cannot be updated because the record is "
-                              + "associated with %s and %s is not associated with this tenant.",
-              holdId, "memberA", "URL relationship").trim(), ErrorType.ERROR);
+      verify(errorService, times(1))
+          .saveError(
+              operationId,
+              IDENTIFIER,
+              String.format(
+                      "%s cannot be updated because the record is "
+                          + "associated with %s and %s is not associated with this tenant.",
+                      holdId, "memberA", "URL relationship")
+                  .trim(),
+              ErrorType.ERROR);
     }
   }
 
@@ -1064,26 +1398,39 @@ class HoldingsDataProcessorTest extends BaseTest {
     when(consortiaService.isTenantInConsortia("diku")).thenReturn(false);
 
     try (var ignored = Mockito.mockStatic(FolioExecutionContextUtil.class)) {
-      when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(),
-              any())).thenReturn(folioExecutionContext);
+      when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(), any()))
+          .thenReturn(folioExecutionContext);
 
       var initElectronicAccForRecord = UUID.randomUUID().toString();
       var initElectronicAccess = UUID.randomUUID().toString();
       var holdId = UUID.randomUUID().toString();
-      var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-              new HoldingsRecord().withId(holdId)
-              .withElectronicAccess(List.of(new ElectronicAccess()
-                      .withRelationshipId(initElectronicAccForRecord)))).tenantId("diku").build();
+      var extendedHolding =
+          ExtendedHoldingsRecord.builder()
+              .entity(
+                  new HoldingsRecord()
+                      .withId(holdId)
+                      .withElectronicAccess(
+                          List.of(
+                              new ElectronicAccess()
+                                  .withRelationshipId(initElectronicAccForRecord))))
+              .tenantId("diku")
+              .build();
       var updatedElectronicAccess = UUID.randomUUID().toString();
 
-      var rules = rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, FIND_AND_REPLACE,
-              initElectronicAccess, updatedElectronicAccess));
+      var rules =
+          rules(
+              rule(
+                  ELECTRONIC_ACCESS_URL_RELATIONSHIP,
+                  FIND_AND_REPLACE,
+                  initElectronicAccess,
+                  updatedElectronicAccess));
 
       var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
       assertNotNull(result);
-      assertEquals(initElectronicAccForRecord, result.getUpdated().getEntity()
-              .getElectronicAccess().getFirst().getRelationshipId());
+      assertEquals(
+          initElectronicAccForRecord,
+          result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
     }
   }
 
@@ -1102,25 +1449,31 @@ class HoldingsDataProcessorTest extends BaseTest {
     var initElectronicAccForRecord = UUID.randomUUID().toString();
     var electronicAccessObj = new ElectronicAccess().withRelationshipId(initElectronicAccForRecord);
     var holdId = UUID.randomUUID().toString();
-    var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withId(holdId)
-            .withElectronicAccess(List.of(electronicAccessObj))).tenantId("diku").build();
+    var extendedHolding =
+        ExtendedHoldingsRecord.builder()
+            .entity(
+                new HoldingsRecord()
+                    .withId(holdId)
+                    .withElectronicAccess(List.of(electronicAccessObj)))
+            .tenantId("diku")
+            .build();
     var updatedElectronicAccess = UUID.randomUUID().toString();
 
-    when(relationshipClient.getById(updatedElectronicAccess)).thenReturn(
-            new ElectronicAccessRelationship().withId(updatedElectronicAccess));
+    when(relationshipClient.getById(updatedElectronicAccess))
+        .thenReturn(new ElectronicAccessRelationship().withId(updatedElectronicAccess));
     when(electronicAccessReferenceService.getRelationshipNameById(updatedElectronicAccess))
-            .thenReturn("el acc name");
+        .thenReturn("el acc name");
 
-    var rules = rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, REPLACE_WITH, "",
-            updatedElectronicAccess));
+    var rules =
+        rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, REPLACE_WITH, "", updatedElectronicAccess));
 
     var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
     assertNotNull(result);
     verifyNoInteractions(errorService);
-    assertEquals(updatedElectronicAccess, result.getUpdated().getEntity()
-            .getElectronicAccess().getFirst().getRelationshipId());
+    assertEquals(
+        updatedElectronicAccess,
+        result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
   }
 
   @Test
@@ -1138,24 +1491,36 @@ class HoldingsDataProcessorTest extends BaseTest {
     var initElectronicAccForRecord = UUID.randomUUID().toString();
     var electronicAccessObj = new ElectronicAccess().withRelationshipId(initElectronicAccForRecord);
     var holdId = UUID.randomUUID().toString();
-    var extendedHolding = ExtendedHoldingsRecord.builder()
-            .entity(new HoldingsRecord().withId(holdId)
-            .withElectronicAccess(List.of(electronicAccessObj))).tenantId("memberB").build();
+    var extendedHolding =
+        ExtendedHoldingsRecord.builder()
+            .entity(
+                new HoldingsRecord()
+                    .withId(holdId)
+                    .withElectronicAccess(List.of(electronicAccessObj)))
+            .tenantId("memberB")
+            .build();
 
-    var rules = rules(new org.folio.bulkops.domain.dto.BulkOperationRule()
-            .ruleDetails(new org.folio.bulkops.domain.dto.RuleDetails()
-                    .option(ELECTRONIC_ACCESS_URL_RELATIONSHIP)
-                    .actions(Collections.singletonList(new Action()
-                            .type(FIND_AND_REMOVE_THESE)
-                            .initial(initElectronicAccForRecord)
-                            .updated("").tenants(List.of("memberB")))).tenants(List.of())));
+    var rules =
+        rules(
+            new org.folio.bulkops.domain.dto.BulkOperationRule()
+                .ruleDetails(
+                    new org.folio.bulkops.domain.dto.RuleDetails()
+                        .option(ELECTRONIC_ACCESS_URL_RELATIONSHIP)
+                        .actions(
+                            Collections.singletonList(
+                                new Action()
+                                    .type(FIND_AND_REMOVE_THESE)
+                                    .initial(initElectronicAccForRecord)
+                                    .updated("")
+                                    .tenants(List.of("memberB"))))
+                        .tenants(List.of())));
 
     var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
     assertNotNull(result);
     verifyNoInteractions(errorService);
-    assertNull(result.getUpdated().getEntity().getElectronicAccess()
-            .getFirst().getRelationshipId());
+    assertNull(
+        result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
   }
 
   @Test
@@ -1167,28 +1532,47 @@ class HoldingsDataProcessorTest extends BaseTest {
     var initElectronicAccForRecord = UUID.randomUUID().toString();
     var electronicAccessObj = new ElectronicAccess().withRelationshipId(initElectronicAccForRecord);
     var holdId = UUID.randomUUID().toString();
-    var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withId(holdId)
-            .withElectronicAccess(List.of(electronicAccessObj))).tenantId("memberA").build();
+    var extendedHolding =
+        ExtendedHoldingsRecord.builder()
+            .entity(
+                new HoldingsRecord()
+                    .withId(holdId)
+                    .withElectronicAccess(List.of(electronicAccessObj)))
+            .tenantId("memberA")
+            .build();
 
-    var rules = rules(new org.folio.bulkops.domain.dto.BulkOperationRule()
-            .ruleDetails(new org.folio.bulkops.domain.dto.RuleDetails()
-                    .option(ELECTRONIC_ACCESS_URL_RELATIONSHIP)
-                    .actions(Collections.singletonList(new Action()
-                            .type(FIND_AND_REMOVE_THESE)
-                            .initial(initElectronicAccForRecord)
-                            .updated("").tenants(List.of()))).tenants(List.of())));
+    var rules =
+        rules(
+            new org.folio.bulkops.domain.dto.BulkOperationRule()
+                .ruleDetails(
+                    new org.folio.bulkops.domain.dto.RuleDetails()
+                        .option(ELECTRONIC_ACCESS_URL_RELATIONSHIP)
+                        .actions(
+                            Collections.singletonList(
+                                new Action()
+                                    .type(FIND_AND_REMOVE_THESE)
+                                    .initial(initElectronicAccForRecord)
+                                    .updated("")
+                                    .tenants(List.of())))
+                        .tenants(List.of())));
     var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
     var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
     assertNotNull(result);
-    verify(errorService, times(1)).saveError(operationId, IDENTIFIER,
-            String.format("%s cannot be updated because the record is associated with %s and "
-                            + "%s is not associated with this tenant.",
-            holdId, "memberA", "URL relationship").trim(), ErrorType.ERROR);
-    assertEquals(initElectronicAccForRecord, result.getUpdated().getEntity()
-            .getElectronicAccess().getFirst().getRelationshipId());
+    verify(errorService, times(1))
+        .saveError(
+            operationId,
+            IDENTIFIER,
+            String.format(
+                    "%s cannot be updated because the record is associated with %s and "
+                        + "%s is not associated with this tenant.",
+                    holdId, "memberA", "URL relationship")
+                .trim(),
+            ErrorType.ERROR);
+    assertEquals(
+        initElectronicAccForRecord,
+        result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
   }
 
   @Test
@@ -1206,25 +1590,38 @@ class HoldingsDataProcessorTest extends BaseTest {
     var initElectronicAccForRecord = UUID.randomUUID().toString();
     var electronicAccessObj = new ElectronicAccess().withRelationshipId(initElectronicAccForRecord);
     var holdId = UUID.randomUUID().toString();
-    var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withId(holdId)
-            .withElectronicAccess(List.of(electronicAccessObj))).tenantId("memberB").build();
+    var extendedHolding =
+        ExtendedHoldingsRecord.builder()
+            .entity(
+                new HoldingsRecord()
+                    .withId(holdId)
+                    .withElectronicAccess(List.of(electronicAccessObj)))
+            .tenantId("memberB")
+            .build();
     var updatedElAcc = initElectronicAccForRecord;
 
-    var rules = rules(new org.folio.bulkops.domain.dto.BulkOperationRule()
-            .ruleDetails(new org.folio.bulkops.domain.dto.RuleDetails()
-                    .option(ELECTRONIC_ACCESS_URL_RELATIONSHIP)
-                    .actions(Collections.singletonList(new Action()
-                            .type(FIND_AND_REPLACE)
-                            .initial(initElectronicAccForRecord)
-                            .updated(updatedElAcc).tenants(List.of()))).tenants(List.of())));
+    var rules =
+        rules(
+            new org.folio.bulkops.domain.dto.BulkOperationRule()
+                .ruleDetails(
+                    new org.folio.bulkops.domain.dto.RuleDetails()
+                        .option(ELECTRONIC_ACCESS_URL_RELATIONSHIP)
+                        .actions(
+                            Collections.singletonList(
+                                new Action()
+                                    .type(FIND_AND_REPLACE)
+                                    .initial(initElectronicAccForRecord)
+                                    .updated(updatedElAcc)
+                                    .tenants(List.of())))
+                        .tenants(List.of())));
 
     var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
     assertNotNull(result);
     verifyNoInteractions(errorService);
-    assertEquals(updatedElAcc, result.getUpdated().getEntity().getElectronicAccess().getFirst()
-            .getRelationshipId());
+    assertEquals(
+        updatedElAcc,
+        result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
   }
 
   @Test
@@ -1236,23 +1633,35 @@ class HoldingsDataProcessorTest extends BaseTest {
     var initElectronicAccForRecord = UUID.randomUUID().toString();
     var electronicAccessObj = new ElectronicAccess().withRelationshipId(initElectronicAccForRecord);
     var holdId = UUID.randomUUID().toString();
-    var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-            new HoldingsRecord().withId(holdId)
-            .withElectronicAccess(List.of(electronicAccessObj))).tenantId("diku").build();
+    var extendedHolding =
+        ExtendedHoldingsRecord.builder()
+            .entity(
+                new HoldingsRecord()
+                    .withId(holdId)
+                    .withElectronicAccess(List.of(electronicAccessObj)))
+            .tenantId("diku")
+            .build();
     var updatedElectronicAccess = UUID.randomUUID().toString();
 
-    var rules = rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, REPLACE_WITH, "",
-            updatedElectronicAccess));
+    var rules =
+        rules(rule(ELECTRONIC_ACCESS_URL_RELATIONSHIP, REPLACE_WITH, "", updatedElectronicAccess));
     var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
     var result = processor.process(IDENTIFIER, extendedHolding, rules);
 
     assertNotNull(result);
-    verify(errorService, times(1)).saveError(operationId, IDENTIFIER,
-            String.format("URL relationship %s doesn't exist in tenant %s",
-            updatedElectronicAccess, "diku").trim(), ErrorType.ERROR);
-    assertEquals(initElectronicAccForRecord, result.getUpdated().getEntity()
-            .getElectronicAccess().getFirst().getRelationshipId());
+    verify(errorService, times(1))
+        .saveError(
+            operationId,
+            IDENTIFIER,
+            String.format(
+                    "URL relationship %s doesn't exist in tenant %s",
+                    updatedElectronicAccess, "diku")
+                .trim(),
+            ErrorType.ERROR);
+    assertEquals(
+        initElectronicAccForRecord,
+        result.getUpdated().getEntity().getElectronicAccess().getFirst().getRelationshipId());
   }
 
   @Test
@@ -1262,21 +1671,29 @@ class HoldingsDataProcessorTest extends BaseTest {
 
     try (var ignored = Mockito.mockStatic(FolioExecutionContextUtil.class)) {
       when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(), any()))
-              .thenReturn(folioExecutionContext);
+          .thenReturn(folioExecutionContext);
 
       var permLocationFromMemberB = UUID.randomUUID().toString();
       var holdId = UUID.randomUUID().toString();
       var initPermLocation = UUID.randomUUID().toString();
-      var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-              new HoldingsRecord().withId(holdId).withPermanentLocationId(initPermLocation))
-              .tenantId("memberA").build();
+      var extendedHolding =
+          ExtendedHoldingsRecord.builder()
+              .entity(new HoldingsRecord().withId(holdId).withPermanentLocationId(initPermLocation))
+              .tenantId("memberA")
+              .build();
 
       List<String> actionTenants = new ArrayList<>();
       actionTenants.add("memberA");
       List<String> ruleTenants = new ArrayList<>();
       ruleTenants.add("memberB");
-      var rules = rules(rule(PERMANENT_LOCATION, REPLACE_WITH, permLocationFromMemberB,
-              actionTenants, ruleTenants));
+      var rules =
+          rules(
+              rule(
+                  PERMANENT_LOCATION,
+                  REPLACE_WITH,
+                  permLocationFromMemberB,
+                  actionTenants,
+                  ruleTenants));
       var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
       var result = processor.process(IDENTIFIER, extendedHolding, rules);
@@ -1284,10 +1701,16 @@ class HoldingsDataProcessorTest extends BaseTest {
       assertNotNull(result);
       assertEquals(initPermLocation, result.getUpdated().getEntity().getPermanentLocationId());
 
-      verify(errorService, times(1)).saveError(operationId, IDENTIFIER,
-              String.format("%s cannot be updated because the record is associated with %s and "
-                              + "%s is not associated with this tenant.",
-              holdId, "memberA", "permanent location").trim(), ErrorType.ERROR);
+      verify(errorService, times(1))
+          .saveError(
+              operationId,
+              IDENTIFIER,
+              String.format(
+                      "%s cannot be updated because the record is associated with %s and "
+                          + "%s is not associated with this tenant.",
+                      holdId, "memberA", "permanent location")
+                  .trim(),
+              ErrorType.ERROR);
     }
   }
 
@@ -1298,18 +1721,21 @@ class HoldingsDataProcessorTest extends BaseTest {
 
     try (var ignored = Mockito.mockStatic(FolioExecutionContextUtil.class)) {
       when(FolioExecutionContextUtil.prepareContextForTenant(any(), any(), any()))
-              .thenReturn(folioExecutionContext);
+          .thenReturn(folioExecutionContext);
 
       var adminNoteFromMemberB = UUID.randomUUID().toString();
       var ruleTenants = List.of("memberB");
       var holdId = UUID.randomUUID().toString();
       var initPermLocation = UUID.randomUUID().toString();
-      var extendedHolding = ExtendedHoldingsRecord.builder().entity(
-              new HoldingsRecord().withId(holdId).withPermanentLocationId(initPermLocation))
-              .tenantId("memberA").build();
+      var extendedHolding =
+          ExtendedHoldingsRecord.builder()
+              .entity(new HoldingsRecord().withId(holdId).withPermanentLocationId(initPermLocation))
+              .tenantId("memberA")
+              .build();
 
-      var rules = rules(rule(PERMANENT_LOCATION, REPLACE_WITH, adminNoteFromMemberB, List.of(),
-              ruleTenants));
+      var rules =
+          rules(
+              rule(PERMANENT_LOCATION, REPLACE_WITH, adminNoteFromMemberB, List.of(), ruleTenants));
       var operationId = rules.getBulkOperationRules().getFirst().getBulkOperationId();
 
       var result = processor.process(IDENTIFIER, extendedHolding, rules);
@@ -1317,10 +1743,16 @@ class HoldingsDataProcessorTest extends BaseTest {
       assertNotNull(result);
       assertEquals(initPermLocation, result.getUpdated().getEntity().getPermanentLocationId());
 
-      verify(errorService, times(1)).saveError(operationId, IDENTIFIER,
-              String.format("%s cannot be updated because the record is associated with %s and "
-                              + "%s is not associated with this tenant.",
-              holdId, "memberA", "permanent location").trim(), ErrorType.ERROR);
+      verify(errorService, times(1))
+          .saveError(
+              operationId,
+              IDENTIFIER,
+              String.format(
+                      "%s cannot be updated because the record is associated with %s and "
+                          + "%s is not associated with this tenant.",
+                      holdId, "memberA", "permanent location")
+                  .trim(),
+              ErrorType.ERROR);
     }
   }
 
@@ -1337,10 +1769,15 @@ class HoldingsDataProcessorTest extends BaseTest {
     var actionTenants = List.of("memberB");
     var holdId = UUID.randomUUID().toString();
     var initPermLocation = UUID.randomUUID().toString();
-    var extendedHold = ExtendedHoldingsRecord.builder().entity(new HoldingsRecord().withId(holdId)
-            .withPermanentLocationId(initPermLocation)).tenantId("memberB").build();
-    var rules = rules(rule(PERMANENT_LOCATION, REPLACE_WITH, locationIdFromMemberB, actionTenants,
-            List.of()));
+    var extendedHold =
+        ExtendedHoldingsRecord.builder()
+            .entity(new HoldingsRecord().withId(holdId).withPermanentLocationId(initPermLocation))
+            .tenantId("memberB")
+            .build();
+    var rules =
+        rules(
+            rule(
+                PERMANENT_LOCATION, REPLACE_WITH, locationIdFromMemberB, actionTenants, List.of()));
     var result = processor.process(IDENTIFIER, extendedHold, rules);
 
     assertNotNull(result);
@@ -1351,20 +1788,22 @@ class HoldingsDataProcessorTest extends BaseTest {
 
   private HoldingsRecord buildHoldingsWithElectronicAccess() {
     return HoldingsRecord.builder()
-            .electronicAccess(List.of(
-                    ElectronicAccess.builder()
-                            .relationshipId("2510a1d1-a61c-4378-8886-b831004f018e")
-                            .uri("http://example.org")
-                            .linkText("link text")
-                            .materialsSpecification("materials")
-                            .publicNote("public note").build(),
-                    ElectronicAccess.builder()
-                            .relationshipId("3510a1d1-a61c-4378-8886-b831004f018e")
-                            .uri("http://Example.org")
-                            .linkText("Link text")
-                            .materialsSpecification("Materials")
-                            .publicNote("note").build()
-            )).build();
+        .electronicAccess(
+            List.of(
+                ElectronicAccess.builder()
+                    .relationshipId("2510a1d1-a61c-4378-8886-b831004f018e")
+                    .uri("http://example.org")
+                    .linkText("link text")
+                    .materialsSpecification("materials")
+                    .publicNote("public note")
+                    .build(),
+                ElectronicAccess.builder()
+                    .relationshipId("3510a1d1-a61c-4378-8886-b831004f018e")
+                    .uri("http://Example.org")
+                    .linkText("Link text")
+                    .materialsSpecification("Materials")
+                    .publicNote("note")
+                    .build()))
+        .build();
   }
 }
-
