@@ -46,12 +46,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 class MarcInstanceDataProcessorTest extends BaseTest {
-  @MockitoBean
-  private ErrorService errorService;
-  @MockitoBean
-  private SubjectReferenceService subjectReferenceService;
-  @Autowired
-  private MarcInstanceDataProcessor processor;
+  @MockitoBean private ErrorService errorService;
+  @MockitoBean private SubjectReferenceService subjectReferenceService;
+  @Autowired private MarcInstanceDataProcessor processor;
 
   @Test
   @SneakyThrows
@@ -81,41 +78,41 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField.addSubfield(new SubfieldImpl('b', "text b"));
     marcRecord.addVariableField(dataField);
     var bulkOperationId = UUID.randomUUID();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("500")
             .ind1("1")
             .ind2("\\")
             .subfield("b")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("text"))),
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text"))),
                     new MarcAction()
-                            .name(UpdateActionType.APPEND)
-                            .data(List.of(
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.VALUE)
-                                            .value("text a"),
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.SUBFIELD)
-                                            .value("a")))));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .name(UpdateActionType.APPEND)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text a"),
+                                new MarcActionDataInner().key(MarcDataType.SUBFIELD).value("a")))));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
     var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
     var simpleDateFormat = new SimpleDateFormat(pattern);
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
-            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -153,27 +150,36 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var simpleDateFormat = new SimpleDateFormat(pattern);
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
     var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
-    var findAndAppendRule = new BulkOperationMarcRule().bulkOperationId(bulkOperationId).tag("500")
-            .ind1("1").ind2("1").subfield("a").actions(List.of(
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("1")
+            .subfield("a")
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("text"))),
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text"))),
                     new MarcAction()
-                            .name(UpdateActionType.REMOVE_FIELD)
-                            .data(Collections.emptyList())));
-    var rules = new BulkOperationMarcRuleCollection()
-            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule)).totalRecords(1);
+                        .name(UpdateActionType.REMOVE_FIELD)
+                        .data(Collections.emptyList())));
+    var rules =
+        new BulkOperationMarcRuleCollection()
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
 
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream()
-            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -214,33 +220,36 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var simpleDateFormat = new SimpleDateFormat(pattern);
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
     var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("500")
             .ind1("1")
             .ind2("1")
             .subfield("a")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("text"))),
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text"))),
                     new MarcAction()
-                            .name(UpdateActionType.REMOVE_SUBFIELD)
-                            .data(Collections.emptyList())));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .name(UpdateActionType.REMOVE_SUBFIELD)
+                        .data(Collections.emptyList())));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
 
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
-            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -282,36 +291,38 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var simpleDateFormat = new SimpleDateFormat(pattern);
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
     var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
-    var findAndReplaceRule = new BulkOperationMarcRule()
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
+    var findAndReplaceRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("500")
             .ind1("1")
             .ind2("\\")
             .subfield("a")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("old"))),
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("old"))),
                     new MarcAction()
-                            .name(UpdateActionType.REPLACE_WITH)
-                            .data(List.of(
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.VALUE)
-                                            .value("new")))));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .name(UpdateActionType.REPLACE_WITH)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("new")))));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndReplaceRule))
             .totalRecords(1);
 
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
-            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -336,7 +347,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     subfield = dataFields.get(4).getSubfields().get(0);
     assertThat(subfield.getCode()).isEqualTo('a');
     assertThat(subfield.getData()).isEqualTo("old value");
-
   }
 
   @Test
@@ -367,23 +377,26 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField.addSubfield(new SubfieldImpl('a', "Text a"));
     marcRecord.addVariableField(dataField);
     var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("500")
             .ind1("1")
             .ind2("\\")
             .subfield("a")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(UpdateActionType.REMOVE_ALL)
-                            .data(Collections.singletonList(new MarcActionDataInner()
+                        .name(UpdateActionType.REMOVE_ALL)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner()
                                     .key(MarcDataType.VALUE)
                                     .value("text a")))));
-    var rules = new BulkOperationMarcRuleCollection()
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
     var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
@@ -391,8 +404,10 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
-            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -419,14 +434,22 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
           null   | text b | b    | Action data VALUE is absent.    | ID   | true
           text a | null   | b    | Action data VALUE is absent.    | ID   | false
           text a | text b | null | Action data SUBFIELD is absent. | HRID | false
-          """, delimiter = '|', nullValues = "null")
-  void shouldSaveErrorsOnBadRule(String findValue, String appendValue, String subfieldValue,
-                                 String errorMessage, IdentifierType identifierType,
-                                 boolean isInstanceId) {
+          """,
+      delimiter = '|',
+      nullValues = "null")
+  void shouldSaveErrorsOnBadRule(
+      String findValue,
+      String appendValue,
+      String subfieldValue,
+      String errorMessage,
+      IdentifierType identifierType,
+      boolean isInstanceId) {
     var dataField500 = new DataFieldImpl("500", '1', '2');
     dataField500.addSubfield(new SubfieldImpl('a', "text a"));
     var instanceId = UUID.randomUUID().toString();
@@ -442,34 +465,38 @@ class MarcInstanceDataProcessorTest extends BaseTest {
       marcRecord.addVariableField(dataField999);
     }
     var bulkOperationId = UUID.randomUUID();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("500")
             .ind1("1")
             .ind2("2")
             .subfield("a")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner()
                                     .key(MarcDataType.VALUE)
                                     .value(findValue))),
                     new MarcAction()
-                            .name(UpdateActionType.APPEND)
-                            .data(List.of(
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.VALUE)
-                                            .value(appendValue),
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.SUBFIELD)
-                                            .value(subfieldValue)))));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .name(UpdateActionType.APPEND)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value(appendValue),
+                                new MarcActionDataInner()
+                                    .key(MarcDataType.SUBFIELD)
+                                    .value(subfieldValue)))));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(identifierType)
-            .build();
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(identifierType).build();
     processor.update(operation, marcRecord, rules, new Date());
 
     var identifier = isInstanceId ? instanceId : hrid;
@@ -477,13 +504,19 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
           FIND                  | MARK_AS_STAFF_ONLY    | MARK_AS_STAFF_ONLY
           FIND                  | null                  | FIND
           FIND_AND_REMOVE_THESE | null                  | FIND_AND_REMOVE_THESE
-          """, delimiter = '|', nullValues = "null")
-  void shouldNotApplyUnsupportedAction(UpdateActionType updateActionType1,
-                                       UpdateActionType updateActionType2, String errorMessageArg) {
+          """,
+      delimiter = '|',
+      nullValues = "null")
+  void shouldNotApplyUnsupportedAction(
+      UpdateActionType updateActionType1,
+      UpdateActionType updateActionType2,
+      String errorMessageArg) {
     var hrid = "inst000001";
     var controlNumberField = new ControlFieldImpl("001", hrid);
     var marcRecord = new RecordImpl();
@@ -496,25 +529,27 @@ class MarcInstanceDataProcessorTest extends BaseTest {
       actions.add(new MarcAction().name(updateActionType2));
     }
     var bulkOperationId = UUID.randomUUID();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("500")
             .ind1("1")
             .ind2("2")
             .subfield("a")
             .actions(actions);
-    var rules = new BulkOperationMarcRuleCollection()
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.HRID)
-            .build();
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.HRID).build();
 
     processor.update(operation, marcRecord, rules, new Date());
 
-    var errorMessageTemplate = FIND.equals(updateActionType1) && nonNull(updateActionType2)
-            ? "Action FIND + %s is not supported yet." : "Action %s is not supported yet.";
+    var errorMessageTemplate =
+        FIND.equals(updateActionType1) && nonNull(updateActionType2)
+            ? "Action FIND + %s is not supported yet."
+            : "Action %s is not supported yet.";
     var errorMessage = String.format(errorMessageTemplate, errorMessageArg);
     verify(errorService).saveError(bulkOperationId, hrid, errorMessage, ErrorType.ERROR);
   }
@@ -535,56 +570,65 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField.addSubfield(new SubfieldImpl('a', "text a"));
     marcRecord.addVariableField(dataField);
     var bulkOperationId = UUID.randomUUID();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("510")
             .ind1("1")
             .ind2("1")
             .subfield("b")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(ADD_TO_EXISTING)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("text b"))),
-                    new MarcAction()
-                            .name(ADDITIONAL_SUBFIELD)
-                            .data(Collections.emptyList())))
-            .subfields(List.of(new MarcSubfieldAction()
-                            .subfield("1")
-                            .actions(List.of(new MarcAction()
-                                            .name(ADD_TO_EXISTING)
-                                            .data(Collections.singletonList(
-                                                    new MarcActionDataInner()
-                                                    .key(MarcDataType.VALUE)
-                                                    .value("text 1"))),
-                                    new MarcAction()
-                                            .name(ADDITIONAL_SUBFIELD)
-                                            .data(Collections.emptyList()))),
+                        .name(ADD_TO_EXISTING)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text b"))),
+                    new MarcAction().name(ADDITIONAL_SUBFIELD).data(Collections.emptyList())))
+            .subfields(
+                List.of(
                     new MarcSubfieldAction()
-                            .subfield("a")
-                            .actions(List.of(new MarcAction()
-                                            .name(ADD_TO_EXISTING)
-                                            .data(Collections.singletonList(
-                                                    new MarcActionDataInner()
-                                                    .key(MarcDataType.VALUE)
-                                                    .value("text a"))),
-                                    new MarcAction()
-                                            .name(ADDITIONAL_SUBFIELD)
-                                            .data(Collections.emptyList())))));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .subfield("1")
+                        .actions(
+                            List.of(
+                                new MarcAction()
+                                    .name(ADD_TO_EXISTING)
+                                    .data(
+                                        Collections.singletonList(
+                                            new MarcActionDataInner()
+                                                .key(MarcDataType.VALUE)
+                                                .value("text 1"))),
+                                new MarcAction()
+                                    .name(ADDITIONAL_SUBFIELD)
+                                    .data(Collections.emptyList()))),
+                    new MarcSubfieldAction()
+                        .subfield("a")
+                        .actions(
+                            List.of(
+                                new MarcAction()
+                                    .name(ADD_TO_EXISTING)
+                                    .data(
+                                        Collections.singletonList(
+                                            new MarcActionDataInner()
+                                                .key(MarcDataType.VALUE)
+                                                .value("text a"))),
+                                new MarcAction()
+                                    .name(ADDITIONAL_SUBFIELD)
+                                    .data(Collections.emptyList())))));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
     var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
     var simpleDateFormat = new SimpleDateFormat(pattern);
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
     processor.update(operation, marcRecord, rules, date);
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
-            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -611,38 +655,38 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField.addSubfield(new SubfieldImpl('b', "text b"));
     marcRecord.addVariableField(dataField);
     var bulkOperationId = UUID.randomUUID();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("900")
             .ind1("1")
             .ind2("\\")
             .subfield("b")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("text b"))),
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text b"))),
                     new MarcAction()
-                            .name(UpdateActionType.APPEND)
-                            .data(List.of(
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.VALUE)
-                                            .value("text a"),
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.SUBFIELD)
-                                            .value("a")))));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .name(UpdateActionType.APPEND)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text a"),
+                                new MarcActionDataInner().key(MarcDataType.SUBFIELD).value("a")))));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
     processor.update(operation, marcRecord, rules, new Date());
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
-            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt =
+        marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag()))
+            .findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101100202.4");
@@ -666,53 +710,55 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField.addSubfield(new SubfieldImpl('i', identifier));
     marcRecord.addVariableField(dataField);
     var bulkOperationId = UUID.randomUUID();
-    var findAndAppendRule = new BulkOperationMarcRule()
+    var findAndAppendRule =
+        new BulkOperationMarcRule()
             .bulkOperationId(bulkOperationId)
             .tag("001")
             .ind1("1")
             .ind2("\\")
             .subfield("b")
-            .actions(List.of(
+            .actions(
+                List.of(
                     new MarcAction()
-                            .name(FIND)
-                            .data(Collections.singletonList(new MarcActionDataInner()
-                                    .key(MarcDataType.VALUE)
-                                    .value("text b"))),
+                        .name(FIND)
+                        .data(
+                            Collections.singletonList(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text b"))),
                     new MarcAction()
-                            .name(UpdateActionType.APPEND)
-                            .data(List.of(
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.VALUE)
-                                            .value("text a"),
-                                    new MarcActionDataInner()
-                                            .key(MarcDataType.SUBFIELD)
-                                            .value("a")))));
-    var rules = new BulkOperationMarcRuleCollection()
+                        .name(UpdateActionType.APPEND)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value("text a"),
+                                new MarcActionDataInner().key(MarcDataType.SUBFIELD).value("a")))));
+    var rules =
+        new BulkOperationMarcRuleCollection()
             .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
             .totalRecords(1);
     var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
     var simpleDateFormat = new SimpleDateFormat(pattern);
     var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var operation = BulkOperation.builder()
-            .id(bulkOperationId)
-            .identifierType(IdentifierType.ID)
-            .build();
+    var operation =
+        BulkOperation.builder().id(bulkOperationId).identifierType(IdentifierType.ID).build();
     processor.update(operation, marcRecord, rules, date);
 
     var expectedErrorMessage = "Bulk edit of 001 field is not supported";
-    verify(errorService).saveError(bulkOperationId, identifier, expectedErrorMessage,
-            ErrorType.ERROR);
+    verify(errorService)
+        .saveError(bulkOperationId, identifier, expectedErrorMessage, ErrorType.ERROR);
   }
 
   @Test
   void shouldSetRecordStatusToDeletedWhenSetToTrue() throws Exception {
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .updateOption(org.folio.bulkops.domain.dto.UpdateOptionType.SET_RECORDS_FOR_DELETE)
             .actions(List.of(new MarcAction().name(UpdateActionType.SET_TO_TRUE)));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
-    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "applyRuleToRecord", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
     assertThat(marcRecord.getLeader().getRecordStatus()).isEqualTo('d');
@@ -720,13 +766,17 @@ class MarcInstanceDataProcessorTest extends BaseTest {
 
   @Test
   void shouldSetRecordStatusToCorrectedWhenSetToFalse() throws Exception {
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .updateOption(org.folio.bulkops.domain.dto.UpdateOptionType.SET_RECORDS_FOR_DELETE)
             .actions(List.of(new MarcAction().name(UpdateActionType.SET_TO_FALSE)));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
-    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "applyRuleToRecord", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
     assertThat(marcRecord.getLeader().getRecordStatus()).isEqualTo('c');
@@ -734,42 +784,55 @@ class MarcInstanceDataProcessorTest extends BaseTest {
 
   @Test
   void shouldThrowExceptionForUnsupportedSetRecordsForDeleteAction() throws Exception {
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .updateOption(org.folio.bulkops.domain.dto.UpdateOptionType.SET_RECORDS_FOR_DELETE)
             .actions(List.of(new MarcAction().name(UpdateActionType.APPEND)));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
-    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "applyRuleToRecord", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
-    var exception = assertThrows(InvocationTargetException.class, () -> method.invoke(processor,
-            rule, marcRecord));
+    var exception =
+        assertThrows(
+            InvocationTargetException.class, () -> method.invoke(processor, rule, marcRecord));
     assertThat(exception.getCause()).isInstanceOf(BulkOperationException.class);
-    assertThat(exception.getCause().getMessage()).contains(
-            "is not supported for SET_RECORDS_FOR_DELETE option.");
+    assertThat(exception.getCause().getMessage())
+        .contains("is not supported for SET_RECORDS_FOR_DELETE option.");
   }
 
   @Test
   void processAddToExisting_shouldHaveChangesInMrcIfSubjectTagAndSubfieldNotLetterOr2()
-          throws Exception {
+      throws Exception {
     var tag = "650";
     var ind1 = "1";
     var ind2 = "0";
     var subfield = "7"; // not a letter and not '2'
     var value = "test";
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .tag(tag)
             .ind1(ind1)
             .ind2(ind2)
             .subfield(subfield)
-            .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
-                            .value(value)))));
+            .actions(
+                List.of(
+                    new MarcAction()
+                        .name(UpdateActionType.ADD_TO_EXISTING)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
     var marcRecord = new RecordImpl();
 
     // Use reflection to call private method
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
@@ -779,31 +842,39 @@ class MarcInstanceDataProcessorTest extends BaseTest {
 
   @Test
   void processAddToExisting_shouldHaveMarcInAreYouSureIfSubjectTagInd2is7Subfield2AndSrcNotExists()
-          throws Exception {
+      throws Exception {
     var tag = "650";
     var ind1 = "1";
     var ind2 = "7";
     var subfield = "2";
     var value = "not-exist";
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .tag(tag)
             .ind1(ind1)
             .ind2(ind2)
             .subfield(subfield)
-            .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
-                            .value(value)))));
+            .actions(
+                List.of(
+                    new MarcAction()
+                        .name(UpdateActionType.ADD_TO_EXISTING)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
     var marcRecord = new RecordImpl();
 
     when(subjectReferenceService.getSubjectSourceNameByCode(value)).thenReturn(HYPHEN);
 
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
     assertThat(marcRecord.getDataFields().getFirst().getSubfields().getFirst().getData())
-            .isEqualTo("not-exist");
+        .isEqualTo("not-exist");
   }
 
   @Test
@@ -813,18 +884,26 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var ind2 = "0";
     var subfield = "a";
     var value = "subject";
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .tag(tag)
             .ind1(ind1)
             .ind2(ind2)
             .subfield(subfield)
-            .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
-                            .value(value)))));
+            .actions(
+                List.of(
+                    new MarcAction()
+                        .name(UpdateActionType.ADD_TO_EXISTING)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
     var marcRecord = new RecordImpl();
 
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
@@ -842,18 +921,26 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var ind2 = "1";
     var subfield = "a";
     var value = "notSubject";
-    var rule = new BulkOperationMarcRule()
+    var rule =
+        new BulkOperationMarcRule()
             .tag(tag)
             .ind1(ind1)
             .ind2(ind2)
             .subfield(subfield)
-            .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
-                            .value(value)))));
+            .actions(
+                List.of(
+                    new MarcAction()
+                        .name(UpdateActionType.ADD_TO_EXISTING)
+                        .data(
+                            List.of(
+                                new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
     var marcRecord = new RecordImpl();
 
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
-            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method =
+        processor
+            .getClass()
+            .getDeclaredMethod(
+                "processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
